--- a/index.html
+++ b/index.html
@@ -56,6 +56,21 @@
         </div>
 
         <div id="mid-3" class="mid">
+          <button id="plot-v-btn">plot potential energy</button>
+          <div class="graph-contain">
+            <canvas id="plot-potential" class="func-plots" width="2000" height="1400"></canvas>
+          </div>
+        </div>
+
+        <div id="mid-4" class="mid">
+          <button id="solve-eigenfuncs">Solve for standing waves</button><br>
+          <input type="range" id="eigenfunc-display-slider" min="0" max="0" value="0" step="1"><br>
+          <div class="graph-contain">
+            <canvas id="plot-eigen-waves" class="func-plots" width="2000" height="1400"></canvas>
+          </div>
+        </div>
+
+        <div id="mid-5" class="mid">
           The initial wave function:<br>
           \( \psi(x) = \)
           <div class="equation-pieces-set" id="equation-pieces-set-psi">
@@ -67,25 +82,24 @@
           <button>+ add function piece</button>
         </div>
 
-        <div id="mid-4" class="mid">
-          <button id="plot-init">plot potential energy and wave</button>
-          <canvas id="plot-potential-init-wave" class="func-plots" width="2000" height="1400"></canvas>
-        </div>
-
-        <div id="mid-5" class="mid">
-          <button id="solve-eigenfuncs">Solve for standing waves</button><br>
-          <input type="range" id="eigenfunc-display-slider" min="0" max="0" value="0" step="1"><br>
-          <canvas id="plot-eigen-waves" class="func-plots" width="2000" height="1400"></canvas>
-
-        </div>
         <div id="mid-6" class="mid">
-          t: <input type="number" value="0" min="0" step="0.01" id="wave-t"> <button id="play-wave">play</button>
-          <canvas id="plot-wave-progression" class="func-plots" width="2000" height="1400"></canvas>
+          <button id="plot-init-psi-btn">plot initial wave function</button>
+          <div class="graph-contain">
+            <canvas id="plot-init-wave" class="func-plots" width="2000" height="1400"></canvas>
+          </div>
         </div>
 
         <div id="mid-7" class="mid">
+          <button id="plot-init-psi-transform-btn">plot wave function</button>
+          t: <input type="number" value="0" min="0" step="0.01" id="wave-t"> <button id="play-wave">play</button>
+          <div class="graph-contain">
+            <canvas id="plot-wave-progression" class="func-plots" width="2000" height="1400"></canvas>
+          </div>
         </div>
+
         <div id="mid-8" class="mid">
+        </div>
+        <div id="mid-9" class="mid">
         </div>
     </body>
 </html>
