--- a/index.html
+++ b/index.html
@@ -24,23 +24,29 @@
           main();
         </script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
+        <link href="https://fonts.cdnfonts.com/css/now" rel="stylesheet">
         <link rel="stylesheet" href="index.css">
     </head>
     <body>
         <div hidden="hidden" id="templates">
           <div class="equation-piece">
-            <div class="remove-x">x</div>
             <math-field class="equation-piece-field"></math-field>
             \(x \in [ \) <input type="number" value="-10" step="0.01" class="range-low">, <input type="number" value="10" step="0.01" class="range-high"> \( ] \)
+            &nbsp;&nbsp;&nbsp;
+            <div class="remove-x">x</div>
           </div>
         </div>
 
         <h1>Schrodinger's Sandbox</h1>
-        <h2>Numerical Solutions to Quantum Wave Functions Simulator</h2>
+        <h2>Quantum Wave Functions Simulator</h2>
+        <h3>Made by <a href="https://www.hornetsnestguild.com/cvs/kevvol">Kevin//DeepFriedPancake🥞</a>
+          @ <a href="https://www.hornetsnestguild.com/">The Hornet's Nest</a></h3>
 
         <div id="mid-1" class="mid">
             The Schrodinger equation
-            \[ i\hbar \frac{\partial \Psi}{\partial t} = -\frac{\hbar^2}{2m} \frac{\partial^2\Psi}{\partial x^2} + V \Psi \]
+            <div class="eqn-centered">
+              \[ i\hbar \frac{\partial \Psi}{\partial t} = -\frac{\hbar^2}{2m} \frac{\partial^2\Psi}{\partial x^2} + V \Psi \]
+            </div>
             <br>
         </div>
 
@@ -57,15 +63,15 @@
         </div>
 
         <div id="mid-3" class="mid">
-          <button id="plot-v-btn">plot potential energy</button>
+          <button id="plot-v-btn" class="plot">plot potential energy</button>
           <div class="graph-contain">
             <canvas id="plot-potential" class="func-plots" width="2000" height="1400"></canvas>
           </div>
         </div>
 
         <div id="mid-4" class="mid">
-          <button id="solve-eigenfuncs">Solve for standing waves</button><br>
-          (Move the slider to see different standing wave functions!)<br>
+          <button id="solve-eigenfuncs" class="plot">Solve for standing waves</button><br>
+          (After clicking solve, move the slider to see different standing wave functions!)<br>
           <input type="range" id="eigenfunc-display-slider" min="0" max="0" value="0" step="1"><br>
           <div class="graph-contain">
             <canvas id="plot-eigen-waves" class="func-plots" width="2000" height="1400"></canvas>
@@ -85,15 +91,16 @@
         </div>
 
         <div id="mid-6" class="mid">
-          <button id="plot-init-psi-btn">plot initial wave function</button>
+          <button id="plot-init-psi-btn" class="plot">plot initial wave function</button>
           <div class="graph-contain">
             <canvas id="plot-init-wave" class="func-plots" width="2000" height="1400"></canvas>
           </div>
         </div>
 
         <div id="mid-7" class="mid">
-          <button id="plot-init-psi-transform-btn">plot wave function</button>
-          t: <input type="number" value="0" min="0" step="0.01" id="wave-t"> <button id="play-wave">play</button>
+          <button id="plot-init-psi-transform-btn" class="plot">plot wave function</button><br>
+          t = <input type="number" value="0" min="0" step="0.01" id="wave-t"> <button id="play-wave">play</button> <br>
+          (animation speed: dt = <input type="number" value="0.01" min="0.001" max="1" step="0.001" id="wave-anim-speed">)
           <div class="graph-contain">
             <canvas id="plot-wave-progression" class="func-plots" width="2000" height="1400"></canvas>
           </div>
@@ -106,5 +113,10 @@
         </div>
         <div id="mid-9" class="mid">
         </div>
+
+        <div class="footr">
+          © Made by <a href="https://www.hornetsnestguild.com/cvs/kevvol">Kevin//DeepFriedPancake🥞</a>
+          @ <a href="https://www.hornetsnestguild.com/">The Hornet's Nest</a>
+      </div>
     </body>
 </html>
