--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
         <div id="mid-4" class="mid">
           <button id="solve-eigenfuncs" class="plot">Solve for standing waves</button><br>
-          (After clicking solve, move the slider to see different standing wave functions!)<br>
+          (After solutions appear, move the slider to see different standing wave functions!)<br>
           <input type="range" id="eigenfunc-display-slider" min="0" max="0" value="0" step="1"><br>
           <div class="graph-contain">
             <canvas id="plot-eigen-waves" class="func-plots" width="2000" height="1400"></canvas>
@@ -91,7 +91,8 @@
         </div>
 
         <div id="mid-6" class="mid">
-          <button id="plot-init-psi-btn" class="plot">plot initial wave function</button>
+          <button id="plot-init-psi-btn" class="plot">plot initial wave function</button><br>
+          (It will be normalized automatically)
           <div class="graph-contain">
             <canvas id="plot-init-wave" class="func-plots" width="2000" height="1400"></canvas>
           </div>
