--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title>Schrodinger's Sandbox</title>
+        <title>Schrodinger's Sandbox - Quantum Wave Functions Simulator</title>
         <!--
         <script defer src="https://unpkg.com/mathlive"></script>
         <script defer src="https://unpkg.com/@cortex-js/compute-engine"></script>
@@ -26,6 +26,23 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
         <link href="https://fonts.cdnfonts.com/css/now" rel="stylesheet">
         <link rel="stylesheet" href="index.css">
+
+        
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-HLC7P3CNJL"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+        
+          gtag('config', 'G-HLC7P3CNJL');
+        </script>
+
+        <!-- meta tags -->
+        <meta property="og:title" content="Schrodinger's Sandbox - Quantum Wave Functions Simulator">
+        <meta property="og:type" content="website">
+        <meta property="og:image" content="metaimg.png">
+        <meta property="og:description" content="Interactive quantum wave functions simulator by numerically solving the Schrodinger's equation. Input your own custom potential and initial wave function!">
     </head>
     <body>
         <div hidden="hidden" id="templates">
